<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="server_default">ssl://ctfws-mqtt.cmukgb.org:8883</string>

    <string name="app_name">CtFwS Timer</string>
    <string name="app_name_hand">CtFwS Handbook</string>
    <string name="app_name_hand_title">Handbook</string>

    <string name="ctfws_gameend">Game\nEnd</string>
    <string name="ctfws_gamestart">Game\nStart</string>
    <string name="ctfws_jailbreak">Jailbreak\n%1$d of %2$d</string>

    <string name="ctfws_chrono_menutext">Game Timer</string>
    <!-- No timer; setup start in future -->
    <string name="ctfws_chrono_future">Pending</string>
    <!-- No timer; game not configured -->
    <string name="ctfws_chrono_nogame">No Game</string>
    <!-- No timer; game end in past -->
    <string name="ctfws_chrono_over">Over!</string>
    <!-- Counting up, on older Androids: setup in past, start in future -->
    <string name="ctfws_chrono_setup">Setup\n%s</string>
    <!-- Counting up, on older Androids: start in past, end in future; JBs not delineated -->
    <string name="ctfws_chrono_elapsed">Game\n%s</string>
    <!-- Counting down: start in future -->
    <string name="ctfws_chrono_startin">Go in\n%s</string>
    <!-- Counting down: start in past, ultimate jailbreak in future -->
    <string name="ctfws_chrono_jailbreakin">JB %1$d in\n%%s</string>
    <!-- Counting down: No more jailbreaks -->
    <string name="ctfws_chrono_gameend">End in\n%s</string>


    <string name="ctfws_sides_wd">
        <![CDATA[<b><font color=#a94442>Red</font></b> is defending Wean; <b><font color=#8a6d3b>Yellow</font></b> is defending Doherty.]]>
    </string>
    <string name="ctfws_sides_dw">
        <![CDATA[<b><font color=#a94442>Red</font></b> is defending Doherty; <b><font color=#8a6d3b>Yellow</font></b> is defending Wean.]]>
    </string>
    <string name="ctfws_unknown_sides">We seem to be lost; where are we?</string>

    <string name="flags_viz_fmt">
        <![CDATA[<font color=#a94442><b>Red</b>: %1$s</font>, <font color=#8a6d3b><b>Yellow</b>: %2$s</font>]]>
    </string>
    <string name="flags_noviz">Flag scores hidden</string>

    <string name="header_not_config">Game not configured</string>
    <string name="header_gamestate0">Game State: %1$s</string>
    <string name="header_gamestateN" tools:ignore="PluralsCandidate">Game %1$d State: %2$s</string>
    <string name="header_egg">DO NOT TAP ON GLASS</string>
    <string name="header_gametimeela">Game\nTime\nElapsed</string>
    <string name="header_messages">Messages:</string>

    <string name="notify_game_afoot">The game\'s afoot!</string>
    <string name="notify_game_start_soon">Awaiting start of game&#8230;</string>
    <string name="notify_game_end_soon">No more jailbreaks!</string>
    <string name="notify_game_setup">Setup phase</string>
    <string name="notify_start_future">Start time in the future!</string>
    <string name="notify_game_over">Game over!</string>
    <string name="notify_not_config">Game not configured!</string>
    <string name="notify_flags" tools:ignore="PluralsCandidate">Flag captured! Red:%1$s Yellow:%2$s</string>
    <string name="notify_jailbreak">Awaiting jailbreak %1$d of %2$d&#8230;</string>

    <string name="menutext_about">About</string>
    <string name="menutext_handbook">Handbook</string>
    <string name="menutext_prf">Settings</string>
    <string name="menutext_quit">Quit</string>
    <string name="menutext_reconn">Reconnect</string>
    <string name="menutext_search">Search</string>

    <string name="mqtt_state_label">Server State:</string>
    <string name="mqtt_conn">Connected but not subscribed</string>
    <string name="mqtt_disconn">Disconnected (tap to retry now)</string>
    <string name="mqtt_subbed">Subscribed</string>
    <string name="mqtt_subbed_tdelta" tools:ignore="PluralsCandidate">Subscribed (est. %1$d sec. diff.)</string>

    <string name="preftext_mqtt">Set MQTT Server</string>
    <string name="preftext_mqtt_def">Use Default MQTT Server</string>
    <string name="preftext_mqtt_prefcat">MQTT Server</string>
    <string name="preftext_notif_prefcat">Notification Settings</string>
    <string name="preftext_screen_prefcat">Screen and Window Behavior</string>
    <string name="preftext_screen_on_when_game">Stay awake in foreground during games</string>
    <string name="preftext_vibrate_jb">Vibrate on Jailbreak?</string>
    <string name="preftext_vibrate_flag">Vibrate on Flag Capture?</string>
    <string name="preftext_vibrate_mesg">Vibrate on Message?</string>
    <string name="preftext_sound_jb">Sound on Jailbreak?</string>
    <string name="preftext_sound_flag">Sound on Flag Capture?</string>
    <string name="preftext_sound_mesg">Sound on Message?</string>

    <string name="wait_long">Stun 60</string>
    <string name="wait_short">Stun 10</string>

    <string name="about_title">CtFwS Timer Info</string>
    <string name="about_tab_program">Program</string>
    <string name="about_tab_license">License</string>
    <string name="about_tab_debug">Debug</string>
    <string name="about_imagealt">The CMUKGB Shield Logo</string>
    <string name="about_text"><![CDATA[
        <center>
          <a href="http://www.cmukgb.org/ctfws/">Capture The Flag With Stuff Rules</a>
          <br/>
          This project is open source under AGPLv3; see the
            <a href="https://github.com/cmukgb/ctfws-timer-android">GitHub Project Page</a>
          <br/>
          &copy; 2017-2019 Nathaniel Wesley Filardo, Cameron Wong, and others
        </center>
        ]]>
    </string>
    <string name="hand_new">Fetched updated handbook!</string>
</resources>
