<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preftext_mqtt_prefcat">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="server_def"
        android:title="@string/preftext_mqtt_def"/>

    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="server"
        android:defaultValue="@string/server_default"
        android:title="@string/preftext_mqtt"
        app:isPreferenceVisible="false"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preftext_screen_prefcat">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="screen_on_when_game"
            android:title="@string/preftext_screen_on_when_game" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preftext_notif_prefcat">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prf_vibr_jb"
        android:title="@string/preftext_vibrate_jb" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prf_sound_jb"
        android:title="@string/preftext_sound_jb" />

    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:key="prf_vibr_flag"
        android:title="@string/preftext_vibrate_flag" />
    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:key="prf_sound_flag"
        android:title="@string/preftext_sound_flag" />

    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:key="prf_vibr_mesg"
        android:title="@string/preftext_vibrate_mesg" />
    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:key="prf_sound_mesg"
        android:title="@string/preftext_sound_mesg" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
